# iai-parse

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  from  iai-output.txt  lints.toml  release.sh  to
.github/workflows/: pr-checks.yaml  release.yaml
src/: main.rs
tests/corpus/: iai-output-short.csv  iai-output-short.txt
