[package]
name = "iai-parse"
version = "0.1.2"
authors = ["Daniel Parks <oss-iai-parse@demonhorse.org>"]
description = "Convert iai benchmark output to CSV."
homepage = "https://github.com/danielparks/iai-parse"
repository = "https://github.com/danielparks/iai-parse"
documentation = "https://github.com/danielparks/iai-parse"
readme = "README.md"
keywords = ["iai", "benchmark"]
categories = ["development-tools::profiling"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
anyhow = "1.0.44"
clap = { version = "4.0.18", features = ["derive"] }
csv = "1.1.6"
git2 = { version = "0.18.2", default-features = false }
indexmap = "1.9.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
